<resources>
    <string name="app_name">PodcastMP3</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="textlogin">PODCASTMP3</string>
    <string name="textregis">REGISTRASI</string>
    <string name="linkRegistrasi">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="linkLogin">Already registered? Login Now</string>
    <string name="course">Course</string>
    <string name="logout">Logout</string>
    <string name="help">Help/Contact Us</string>
    <string name="courses">Courses</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="data_course">Data Course</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="choose_file">Choose File</string>
    <string name="description">Description</string>
    <string name="end_date">End date</string>
    <string name="title">Title</string>
    <string name="start_date">Start date</string>
    <string name="biaya_pendaftaran">Biaya Pendaftaran</string>
    <string name="contact_us">Contact Us</string>

</resources>