<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEFEFE"
    tools:context=".SendActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e64f4f"
        android:fontFamily="cursive"
        android:text="@string/data_podcast"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/fotoPodcast"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/choose_file"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_upload"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="22sp"
        android:hint="@string/title"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/editDate"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            android:inputType="datetime|date"
            android:textSize="22sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/rate"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textSize="22sp"
        android:backgroundTint="#32db9b" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/update"
        android:textSize="22sp"
        android:backgroundTint="#289197"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#289197"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        android:textSize="22sp"
        android:visibility="gone" />

</LinearLayout>