<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEFEFE"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/textJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e64f4f"
        android:fontFamily="cursive"
        android:text="@string/data_podcast"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="100dp">

    <ImageView
        android:id="@+id/imgCourse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/choose_file"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:contentDescription="@string/date"
            android:src="@drawable/ic_date" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="fill_vertical"
            android:paddingStart="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="#32db9b"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>